# mpkdb

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: config.rs  errors.rs  logging.rs  main.rs  model.rs
src/db/: api.rs  mod.rs
src/db/kdb/: db.rs  mod.rs  parser.rs
src/ui/: main.rs  mod.rs  open.rs
test/: test.kdb
